chore(sonarqube): apply code inspection fixes and improve code quality
- Applied SonarQube-recommended cleanup
- Removed unused code and improved readability
- Minor refactoring for maintainability