@@ -8,10 +8,8 @@ import io.grpc.ManagedChannelBuilder;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -34,6 +32,6 @@ public class FollowServiceClient {
         UserIdList response = followStub.getFollowedUserIds(request);
         return response.getUserIdsList().stream()
                 .map(UUID::fromString)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
